--- a/Bloodmoon/plugin.yml
+++ b/Bloodmoon/plugin.yml
@@ -1,10 +1,10 @@
 name: Bloodmoon
-version: 1.1.1
+version: 1.1.2
 main: com.rappelr.bloodmoon.Bloodmoon
 authors: [Rappelr]
 api-version: 1.14
 depend: []
-description: A Bloodmoon overhaul for BobSMP
+description: A Bloodmoon plugin for BobSMP
 commands:
   bloodmoon:
     description: Bloodmoon core command, subcommands use different permissions
