Moved resources into res subfolder Added load failure message

--- a/Bloodmoon/res/default_world.yml
+++ b/Bloodmoon/res/default_world.yml
@@ -13,6 +13,7 @@ behaviour:
   shields-prevent-hit-effect: false
   darken-sky: false
   ambient-frequency: 30
+  mob-spawn-rate: 25
   
 commands:
   on-start:
