--- a/Bloodmoon/plugin.yml
+++ b/Bloodmoon/plugin.yml
@@ -1,14 +1,15 @@
 name: Bloodmoon
-version: 1.1.3
+version: 1.2.0
 main: com.rappelr.bloodmoon.Bloodmoon
 authors: [Rappelr]
 api-version: 1.14
-depend: []
-description: A Bloodmoon plugin for BobSMP
+softdepend: [ItemsAdder]
+description: A Bloodmoon plugin for Alterria
 commands:
   bloodmoon:
-    description: Bloodmoon core command, subcommands use different permissions
-    usage: /<bloodmoon>
+    description: Core command, try /bm help
+    usage: /bloodmoon help
+    aliases: [bm, bmn]
 permissions:
   bloodmoon.checkdays:
     description: Allows a user to check the amount of days until the next bloodmoon
